--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "react-router-hash-link": "^2.4.3",
-    "react-toastify": "^9.1.3"
+    "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
