--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,12 @@ jobs:
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
 
+      - name: Set up environment variables
+        run: |
+          echo "VITE_EMAILJS_ID=${{ secrets.EMAILJS_ID }}" >> $GITHUB_ENV
+          echo "VITE_SERVICE_ID=${{ secrets.SERVICE_ID }}" >> $GITHUB_ENV
+          echo "VITE_TEMPLATE_ID=${{ secrets.TEMPLATE_ID }}" >> $GITHUB_ENV
+
       - name: Build project
         run: npm run build
 
