--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.12.1",
+    "dotenv": "^16.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.2",
     "react-router-hash-link": "^2.4.3",
-    "react-slick": "^0.29.0",
+    "react-slick": "^0.30.1",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1"
   },
