--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Generated files
 node_modules
 dist
 dist-ssr
@@ -22,3 +23,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Ignoring environment variables file
+.env
+
+# Ignoring ESLint configuration file
+eslintrc.cjs
