--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.2",
     "react-router-hash-link": "^2.4.3",
+    "react-share": "^5.1.0",
     "react-slick": "^0.30.1",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1"
